# blog

./: .dockerignore  .gitignore  Dockerfile  README.md  liara.json  package.sh
backend/: .env.example  Cargo.toml  backup_db.sh
backend/src/: auth.rs  comments.rs  db.rs  handlers.rs  main.rs  models.rs  payments.rs  products.rs  saves.rs  seo.rs  upload.rs  upvotes.rs
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: llms.txt
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: About.tsx  Accordion.tsx  AdminPanel.tsx  CheckoutModal.tsx  CheckoutVerify.tsx  CodeSnippet.tsx  CommentThread.tsx  Comments.tsx  DeleteAccountModal.tsx  FeedbackButton.tsx  Footer.tsx  Header.tsx  Icons.tsx  LoginModal.tsx  MarkdownRenderer.tsx  PostDetail.tsx  PostList.tsx  ProductDetail.tsx  ProfilePage.tsx  SEO.tsx  Store.tsx  test_logic.js  test_null_spread.js  test_parseint.js  test_spread_string.js
frontend/src/components/admin/: AdminCategories.tsx  AdminComments.tsx  AdminFeedbacks.tsx  AdminPosts.tsx  AdminProducts.tsx  AdminSettings.tsx  image.ts
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  CategoryButton.tsx  Input.tsx  Pagination.tsx  SidebarTree.tsx  Textarea.tsx
frontend/src/contexts/: AuthContext.tsx  LanguageContext.tsx  SettingsContext.tsx  UpvoteContext.tsx
frontend/src/i18n/: en.json  fa.json
