[package]
name = "backend"
version = "0.1.1"
edition = "2024"
default-run = "backend"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-br", "compression-gzip"] }
dotenvy = "0.15"
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
jsonwebtoken = "9.3"
axum-extra = { version = "0.10", features = ["cookie"] }
time = "0.3"
uuid = { version = "1.23.2", features = ["v4"] }
tokio-util = { version = "0.7.18", features = ["io"] }
bcrypt = "0.15"
dicebear-core = "10.3.0"
dicebear-styles = { version = "10.2.0", features = ["glyphs"] }
pulldown-cmark = "0.13.4"
image = { version = "0.25", default-features = false, features = ["webp", "jpeg", "png"] }
webp = "0.3"
